# rust-auth-api

./: .env  API_DOCS.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
src/: main.rs
src/config/: database.rs  mod.rs  redis.rs
src/handlers/: auth.rs  mod.rs  profile.rs
src/middleware/: auth.rs
src/models/: user.rs
src/services/: auth.rs
