[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-web-httpauth = "0.8"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.1"
redis = "0.23"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
validator = { version = "0.16", features = ["derive"] }
utoipa = { version = "3.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1", features = ["actix-web"] }
uuid = { version = "1.7", features = ["v4"] } 